[2023-09-homework-05] fix review comments