@@ -10,21 +10,19 @@ import org.springframework.jdbc.support.GeneratedKeyHolder;
 import org.springframework.stereotype.Repository;
 import ru.otus.spring.data.domain.Author;
 import ru.otus.spring.data.domain.Book;
-import ru.otus.spring.data.domain.BookGenreRelation;
 import ru.otus.spring.data.domain.Genre;
 import ru.otus.spring.data.repository.BookRepository;
-import ru.otus.spring.data.repository.GenreRepository;
+import ru.otus.spring.data.repository.extractor.book.BookGenreRelation;
+import ru.otus.spring.data.repository.extractor.book.BookGenreResultSetExtractor;
 import ru.otus.spring.exception.InvalidOperationException;
 
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Repository
@@ -32,14 +30,10 @@ public class BookRepositoryJdbc implements BookRepository {
 
     private final NamedParameterJdbcOperations jdbcOperations;
 
-    private final GenreRepository genreRepository;
-
     @Override
     public List<Book> findAll() {
         var books = getAllBooksWithoutGenres();
-        var relations = getAllGenreRelations();
-        var genres = genreRepository.findAll();
-        mergeBooksInfo(books, genres, relations);
+        loadGenres(books);
         return books;
     }
 
@@ -47,9 +41,7 @@ public class BookRepositoryJdbc implements BookRepository {
     public Optional<Book> findById(long id) {
         try {
             var book = getBookByIdWithoutGenres(id);
-            var relations = getGenreRelationsByBookId(id);
-            var genres = genreRepository.findAll();
-            mergeBooksInfo(List.of(book), genres, relations);
+            loadGenres(List.of(book));
             return Optional.of(book);
         } catch (EmptyResultDataAccessException e) {
             return Optional.empty();
@@ -72,58 +64,44 @@ public class BookRepositoryJdbc implements BookRepository {
         jdbcOperations.update("DELETE FROM books WHERE id = :id", params);
     }
 
-    private List<BookGenreRelation> getAllGenreRelations() {
-        return jdbcOperations.query("SELECT book_id, genre_id from books_genres", new BookGenreRelationRowMapper());
-    }
-
-    private List<BookGenreRelation> getGenreRelationsByBookId(long id) {
-        Map<String, Object> params = Collections.singletonMap("id", id);
-        return jdbcOperations.query("""
-                SELECT book_id, genre_id from books_genres
-                WHERE book_id = :id
-                """, params, new BookGenreRelationRowMapper());
-    }
-
     private List<Book> getAllBooksWithoutGenres() {
         return jdbcOperations.query("""
-                SELECT b.id, b.title, b.author_id, a.full_name
-                FROM books as b 
+                SELECT b.id, b.title, a.id author_id, a.full_name author_full_name
+                FROM books as b
                 LEFT JOIN authors as a ON b.author_id = a.id
                 """, new BookRowMapper());
     }
 
+    private void loadGenres(List<Book> books) {
+        var bookGenreRelations = findBookGenreRelation();
+        mergeBooksInfo(books, bookGenreRelations);
+    }
+
+    private List<BookGenreRelation> findBookGenreRelation() {
+        return jdbcOperations.query("""
+                SELECT bg.book_id, bg.genre_id, g.name genre_name
+                FROM books_genres as bg
+                LEFT JOIN genres as g ON bg.genre_id = g.id
+                """, new BookGenreResultSetExtractor());
+    }
+
+    private void mergeBooksInfo(List<Book> books, List<BookGenreRelation> bookGenreRelations) {
+        for (Book book : books) {
+            bookGenreRelations.stream()
+                    .filter(it -> it.getBookId().equals(book.getId()))
+                    .findFirst()
+                    .ifPresent(it -> book.setGenres(it.getGenres()));
+        }
+    }
+
     private Book getBookByIdWithoutGenres(long id) {
-        Map<String, Object> params = Collections.singletonMap("id", id);
         return jdbcOperations.queryForObject("""
-                SELECT b.id, b.title, b.author_id, a.full_name
-                FROM books as b 
+                SELECT b.id book_id, b.title book_title,
+                b.author_id author_id, a.full_name author_full_name,
+                FROM books as b
                 LEFT JOIN authors as a ON b.author_id = a.id
                 WHERE b.id = :id
-                """, params, new BookRowMapper());
-    }
-
-    private void mergeBooksInfo(List<Book> books, List<Genre> genres, List<BookGenreRelation> relations) {
-        for (Book book : books) {
-            List<Genre> bookGenre = findGenresForBook(book.getId(), relations, genres);
-            book.setGenres(bookGenre);
-        }
-    }
-
-    private List<Genre> findGenresForBook(Long bookId, List<BookGenreRelation> relations, List<Genre> genres) {
-        List<Genre> bookGenres = new ArrayList<>();
-        for (BookGenreRelation relation : relations) {
-            if (relation.getBookId().equals(bookId)) {
-                findGenreById(relation.getGenreId(), genres)
-                        .ifPresent(bookGenres::add);
-            }
-        }
-        return bookGenres;
-    }
-
-    private Optional<Genre> findGenreById(Long genreId, List<Genre> genres) {
-        return genres.stream()
-                .filter(it -> it.getId().equals(genreId))
-                .findFirst();
+                """, Map.of("id", id), new BookRowMapper());
     }
 
     private Book insert(Book book) {
@@ -137,7 +115,7 @@ public class BookRepositoryJdbc implements BookRepository {
                 """, parameters, keyHolder, new String[]{"id"});
 
         book.setId(keyHolder.getKeyAs(Long.class));
-        batchInsertGenresRelationsFor(book);
+        saveGenres(book);
         return book;
     }
 
@@ -151,29 +129,33 @@ public class BookRepositoryJdbc implements BookRepository {
                 UPDATE books SET title = :title, author_id = :author_id WHERE id =:id
                 """, parameters);
 
-        removeGenresRelationsFor(book);
-        batchInsertGenresRelationsFor(book);
+        deleteGenres(book);
+        saveGenres(book);
         return book;
     }
 
-    private void batchInsertGenresRelationsFor(Book book) {
-        var genreIds = book.getGenres().stream().map(Genre::getId).toList();
-        String values = genreIds.stream()
-                .map(i -> "(" + book.getId() + "," + i + ")")
-                .collect(Collectors.joining(","));
-        jdbcOperations
-                .update("insert into books_genres(book_id, genre_id) values " + values, new HashMap<>());
+    private void saveGenres(Book book) {
+        List<MapSqlParameterSource> batchParams = new ArrayList<>();
+        for (Genre genre : book.getGenres()) {
+            MapSqlParameterSource parameters = new MapSqlParameterSource()
+                    .addValue("book_id", book.getId())
+                    .addValue("genre_id", genre.getId());
+            batchParams.add(parameters);
+        }
+        jdbcOperations.batchUpdate("""
+                INSERT INTO books_genres (book_id, genre_id)
+                VALUES (:book_id, :genre_id)
+                """, batchParams.toArray(new MapSqlParameterSource[0]));
     }
 
-    private void removeGenresRelationsFor(Book book) {
-        Map<String, Object> params = Collections.singletonMap("id", book.getId());
-        jdbcOperations.update("DELETE FROM books_genres WHERE book_id = :id", params);
+    private void deleteGenres(Book book) {
+        jdbcOperations.update("DELETE FROM books_genres WHERE book_id = :id", Map.of("id", book.getId()));
     }
 
     private static class BookRowMapper implements RowMapper<Book> {
         @Override
         public Book mapRow(ResultSet rs, int rowNum) throws SQLException {
-            var author = prepareAuthor(rs);
+            var author = createAuthor(rs);
             return createBook(rs, author);
         }
 
@@ -185,19 +167,10 @@ public class BookRepositoryJdbc implements BookRepository {
                     new ArrayList<>());
         }
 
-        private Author prepareAuthor(ResultSet rs) throws SQLException {
+        private Author createAuthor(ResultSet rs) throws SQLException {
             return new Author(
                     rs.getLong("author_id"),
                     rs.getString("full_name"));
-        }
-    }
-
-    private static class BookGenreRelationRowMapper implements RowMapper<BookGenreRelation> {
-        @Override
-        public BookGenreRelation mapRow(ResultSet rs, int rowNum) throws SQLException {
-            return new BookGenreRelation(
-                    rs.getLong("book_id"),
-                    rs.getLong("genre_id"));
         }
     }
 }
